[gd_scene load_steps=4 format=2]

[ext_resource path="res://ReusableGameObjects/PlayerShip/PlayerShip.gd" type="Script" id=1]
[ext_resource path="res://TextureBank/Ships/Default.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9.86858, 6.54472 )

[node name="PlayerShip" type="RigidBody2D"]
position = Vector2( 980, 515 )
rotation = -1.5708
collision_mask = 30
gravity_scale = 0.0
contacts_reported = 5
contact_monitor = true
linear_damp = 1.0
angular_damp = 1.0
script = ExtResource( 1 )

[node name="ShipArea" type="Area2D" parent="."]
collision_layer = 30

[node name="Collision" type="CollisionShape2D" parent="ShipArea"]
position = Vector2( 5.20532, -0.617676 )
rotation = 1.5708
scale = Vector2( 3.84616, 5.76923 )
shape = SubResource( 1 )

[node name="Camera" type="Camera2D" parent="."]
rotation = 1.5708
scale = Vector2( 1.5625, 2.34375 )
current = true

[node name="Texture" type="Sprite" parent="."]
position = Vector2( 4.99994, 0 )
rotation = 1.5708
scale = Vector2( 0.554914, 0.567009 )
z_index = 1
texture = ExtResource( 2 )

[node name="ShipCollide" type="CollisionShape2D" parent="."]
position = Vector2( 5.20532, -0.617615 )
rotation = 1.5708
scale = Vector2( 3.84616, 5.76923 )
shape = SubResource( 1 )
[connection signal="body_entered" from="." to="." method="_on_PlayerShip_body_entered"]
[connection signal="area_entered" from="ShipArea" to="." method="_onAreaEntered"]
[connection signal="area_exited" from="ShipArea" to="." method="_onAreaExited"]
